submod commit: - add math formula support - tuned code font size - tuned page width

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -53,6 +53,11 @@
   {{- if (.Param "comments") }}
   {{- partial "comments.html" . }}
   {{- end }}
+
+  <!-- mathTyping -->
+  {{ if or .Params.math .Site.Params.math }}
+  {{ partial "extend_head.html" . }}
+  {{ end }}
 </article>
 
 {{- end }}{{/* end main */}}
