--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -192,9 +192,15 @@
 }
 
 .post-content code {
-    margin: auto 4px;
+    /* default margin: auto 4px;
     padding: 4px 6px;
     font-size: 0.78em;
+    line-height: 1.5;
+    background: var(--code-bg);
+    border-radius: 2px; */
+    margin: auto 4px;
+    padding: 4px 6px;
+    font-size: 1.2em;
     line-height: 1.5;
     background: var(--code-bg);
     border-radius: 2px;
