--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -201,7 +201,7 @@
     margin: auto 4px;
     padding: 4px 6px;
     font-size: 1.2em;
-    line-height: 1.5;
+    line-height: 1.1em;
     background: var(--code-bg);
     border-radius: 2px;
 }
