--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -18,5 +18,13 @@ onload="renderMathInElement(document.body,
 );"></script>
 {{ end }}
 
+<!-- LXGW font not used -->
+<!-- <link href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.7.0/style.min.css" rel="stylesheet"> -->
+
+<!-- Noto Serif SC font -->
+<link rel="preload" href="https://cdn.jsdelivr.net/npm/@fontsource/noto-serif-sc@4.5.12/chinese-simplified-500.min.css">
+
+<!-- LXGW font -->
+<link  rel="preload" href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.7.0/style.min.css">
 
 {{- /* Head custom content area end */ -}}
