--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -22,9 +22,9 @@ onload="renderMathInElement(document.body,
 <!-- <link href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.7.0/style.min.css" rel="stylesheet"> -->
 
 <!-- Noto Serif SC font -->
-<link rel="preload" href="https://cdn.jsdelivr.net/npm/@fontsource/noto-serif-sc@4.5.12/chinese-simplified-500.min.css">
+<link href="https://cdn.jsdelivr.net/npm/@fontsource/noto-serif@4.5.11/400-italic.min.css" rel="stylesheet">
 
 <!-- LXGW font -->
-<link  rel="preload" href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.7.0/style.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lxgw-wenkai-webfont/1.7.0/lxgwwenkai-regular.css" integrity="sha512-dpLq2e4ZfoiFhcrm0ZHZO6ox0lEYkp6tdKoRwdY4WV9jjhquWoP6cTU57l1hHu+Sfw5oDNqY6FtrMX8WaYlGFQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 {{- /* Head custom content area end */ -}}
