--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -22,12 +22,11 @@ onload="renderMathInElement(document.body,
 <!-- <link href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.7.0/style.min.css" rel="stylesheet"> -->
 
 <!-- Noto Serif SC font -->
-<link
-  rel="prelaod"
-  href="https://cdn.jsdelivr.net/npm/@fontsource/noto-serif-sc@4.5.12/chinese-simplified-500.min.css"
-  as="font">
+<!-- <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@fontsource/noto-serif-sc@4.5.12/chinese-simplified-500.min.css"> -->
 
 <!-- LXGW font -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lxgw-wenkai-webfont/1.7.0/lxgwwenkai-regular.css" integrity="sha512-dpLq2e4ZfoiFhcrm0ZHZO6ox0lEYkp6tdKoRwdY4WV9jjhquWoP6cTU57l1hHu+Sfw5oDNqY6FtrMX8WaYlGFQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.1.0/lxgwwenkai-regular.css"/>
 
 {{- /* Head custom content area end */ -}}
