--- a/assets/css/common/post-entry.css
+++ b/assets/css/common/post-entry.css
@@ -43,9 +43,14 @@
     border: 1px solid var(--border);
 }
 
-.post-entry:active {
-    transform: scale(0.96);
+.post-entry:hover .entry-header h2 {
+    color: var(--link-hover-color);
+    box-shadow: var(--link-hover-underline-shadow);
 }
+
+/* .post-entry:active {
+    transform: scale(0.96);
+} */
 
 .tag-entry .entry-cover {
     display: none;
@@ -54,6 +59,8 @@
 .entry-header h2 {
     font-size: 24px;
     line-height: 1.3;
+    transition: var(--link-transition);
+    display: inline-block;
 }
 
 .entry-content {
@@ -67,7 +74,8 @@
     -webkit-line-clamp: 2;
 }
 
-.entry-footer {
+.entry-footer,
+.entry-footer span > a {
     color: var(--secondary);
     font-size: 13px;
 }
@@ -96,6 +104,7 @@
     pointer-events: none;
     width: 100%;
     height: auto;
+    image-rendering: -webkit-optimize-contrast;
 }
 
 .entry-cover a {
