--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -7,7 +7,7 @@
     --header-height: 60px;
     --footer-height: 60px;
     --radius: 8px;
-    --theme: rgb(255, 255, 255);
+    --theme: rgb(245, 245, 245);
     --entry: rgb(255, 255, 255);
     --primary: rgb(30, 30, 30);
     --secondary: rgb(108, 108, 108);
@@ -16,6 +16,15 @@
     --hljs-bg: rgb(28, 29, 33);
     --code-bg: rgb(245, 245, 245);
     --border: rgb(238, 238, 238);
+
+    --link-color: var(--primary);
+    --link-hover-color: #f0a900;
+    --link-underline-shadow: 0 1px 0 var(--link-color);
+    --link-hover-underline-color: #f3af27;
+    --link-hover-underline-shadow: 0 2px 0 var(--link-hover-underline-color);
+    --link-transition: all 0.5s ease;
+
+
 }
 
 .dark {
