--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -69,7 +69,58 @@
     font-size: 12px;
 }
 
-.post-content a,
+.post-content a {
+    padding: 0 0.25em;
+	font-weight: 500;
+	-webkit-transition: color 0.2s;
+	transition: color 0.2s;
+    position: relative;
+    display: inline-block;
+    outline: none;
+    color: var(--primary);
+    vertical-align: bottom;
+    text-decoration: none;
+    white-space: nowrap;
+}
+.post-content a:hover {
+	color: var(--link-hover-underline-color);
+}
+
+.post-content a::before,
+.post-content a::after {
+	position: absolute;
+	top: 0;
+	font-weight: 100;
+	font-size: 150%;
+	line-height: 1;
+	opacity: 0;
+	-webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
+	transition: opacity 0.2s, transform 0.2s;
+}
+
+.post-content a::before {
+	left: -0.1em;
+	content: '[';
+	-webkit-transform: translateX(-100%);
+	transform: translateX(-100%);
+}
+
+.post-content a::after {
+	right: -0.1em;
+	content: ']';
+	-webkit-transform: translateX(100%);
+	transform: translateX(100%);
+}
+
+.post-content a:hover::before,
+.post-content a:hover::after {
+	opacity: 1;
+	-webkit-transform: translateX(0);
+	transform: translateX(0);
+}
+
+
+
 .toc a:hover {
     box-shadow: 0 1px 0;
     box-decoration-break: clone;
