--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -45,7 +45,8 @@
             {{- $label_text := (site.Params.label.text | default site.Title) }}
             {{- if site.Title }}
             <section class = "link-arrow">
-                <a href="{{ "" | absURL }}" accesskey="h" title="{{ $label_text }} (Alt + H)">
+                <!-- title="{{ $label_text }} (Alt + H)" -->
+                <a href="{{ "" | absURL }}" accesskey="h" title="">
                     {{- if site.Params.label.icon }}
                     {{- $img := resources.Get site.Params.label.icon }}
                     {{- if $img }}
