--- a/assets/css/common/footer.css
+++ b/assets/css/common/footer.css
@@ -36,25 +36,37 @@
     bottom: 60px;
     right: 30px;
     z-index: 99;
-    background: var(--tertiary);
+    background: var(--element-color) url('../../to-top.svg') no-repeat;
+    background-position: center center;
+    background-size:60%;
     width: 42px;
     height: 42px;
     padding: 12px;
     border-radius: 64px;
-    transition: visibility 0.5s, opacity 0.8s linear;
+    transition: visibility 0.6s, opacity 0.8s linear;
+    box-shadow: 3px 3px 5px rgb(183, 183, 183);
+    transition: all 0.8s;
 }
 
-.top-link,
+/* .top-link,
 .top-link svg {
     filter: drop-shadow(0px 0px 0px var(--theme));
-}
+} */
 
-.footer a:hover,
+
 .top-link:hover {
-    color: var(--primary);
+    background: var(--link-hover-color) url('../../to-top.svg') no-repeat;
+    background-position: center center;
+    background-size:60%;
+    box-shadow: 10px 10px 5px grey;
+    transition: all 0.8s;
+    
 }
 
 .top-link:focus,
 #theme-toggle:focus {
     outline: 0;
 }
+
+/* footer 的 a 单独写 */
+/* .footer a:hover */
