--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -84,6 +84,8 @@
 }
 .post-content a:hover {
 	color: var(--link-hover-underline-color);
+    text-shadow: 2px 2px 30px var(--link-hover-underline-color);
+    transition: all 0.6s;
 }
 
 .post-content a::before,
@@ -101,6 +103,7 @@
 .post-content a::before {
 	left: -0.1em;
 	content: '[';
+    color: var(--link-hover-underline-color);
 	-webkit-transform: translateX(-100%);
 	transform: translateX(-100%);
 }
@@ -108,6 +111,7 @@
 .post-content a::after {
 	right: -0.1em;
 	content: ']';
+    color: var(--link-hover-underline-color);
 	-webkit-transform: translateX(100%);
 	transform: translateX(100%);
 }
@@ -117,6 +121,7 @@
 	opacity: 1;
 	-webkit-transform: translateX(0);
 	transform: translateX(0);
+    transition: all 0.6s;
 }
 
 
@@ -399,6 +404,21 @@
     margin-inline-end: 12px;
 }
 
+/* 如何取消掉标题后的h1~h6 */
+h1 .anchor,
+h2 .anchor,
+h3 .anchor,
+h4 .anchor,
+h5 .anchor,
+h6 .anchor {
+    display: none;
+    background: var(--theme);
+    color: var(--theme);
+}
+
+/* 
+
+
 h1:hover .anchor,
 h2:hover .anchor,
 h3:hover .anchor,
@@ -410,7 +430,7 @@ h6:hover .anchor {
     margin-inline-start: 8px;
     font-weight: 500;
     user-select: none;
-}
+} */
 
 .paginav {
     margin: 10px 0;
