--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,7 +14,8 @@
 {{- end }}
 
 {{- if (not site.Params.disableScrollToTop) }}
-<a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g"></a>
+<!-- title="Go to Top (Alt + G)" -->
+<a href="#top" aria-label="go to top" class="top-link" id="top-link" accesskey="g"></a>
 {{- end }}
 
 {{- partial "extend_footer.html" . }}
